@@ -95,16 +95,16 @@ BioOutfit( "weapon.xml.template", {
     "spfx_shield":"ShiS",
     "spfx_armour":"PlaS",
     "lua":      "bioplasma.lua",
-    "delay":    0.8,
-    "speed" :   lerp(  500, 500 ),
+    "delay":    1.2,
+    "speed" :   lerp(  600, 600 ),
     "range" :   lerp(  650, 800 ),
     "falloff":  lerp(  450, 600 ),
-    "energy":   lerpr(   6,  10 ),
+    "energy":   lerpr(   9,  15 ),
     "heatup":   lerp(   25,  40 ),
     "trackmin": 0,
     "trackmax": 2000,
     "penetrate":lerpr(   6,  12 ),
-    "damage":   lerp(    12,  18 ),
+    "damage":   lerp(   18,  27 ),
     "extra":    "<swivel>22</swivel>",
 } ).run( [
     N_("Stinger Organ I"),
@@ -211,16 +211,16 @@ BioOutfit( "weapon.xml.template", {
     "spfx_shield":"ShiS",
     "spfx_armour":"PlaS2",
     "lua":      "bioplasma2.lua",
-    "delay":    1.2,
-    "speed" :   lerp(  500, 500 ),
+    "delay":    1.4,
+    "speed" :   lerp(  600, 600 ),
     "range" :   lerp( 1000, 1400 ),
     "falloff":  lerp(  900, 1200 ),
-    "energy":   lerp(   40,  50 ),
+    "energy":   lerp(   46,  58 ),
     "heatup":   lerp(   60,  75 ),
     "trackmin": lerp( 1500, 2000 ),
     "trackmax": lerp( 4500, 6000 ),
     "penetrate":lerpr(  35,  50 ),
-    "damage":   lerp(   30,  40 ),
+    "damage":   lerp(   35,  47 ),
     "extra":    "<swivel>22</swivel>",
 } ).run( [
     N_("Talon Organ I"),
@@ -360,16 +360,16 @@ BioOutfit( "weapon.xml.template", {
     "spfx_shield":"ShiM",
     "spfx_armour":"PlaM",
     "lua":      "bioplasma.lua",
-    "delay":    1.4,
-    "speed" :   lerp(  500, 500 ),
-    "range" :   lerp( 2000, 2400 ),
+    "delay":    1.8,
+    "speed" :   lerp(  600, 600 ),
+    "range" :   lerp( 1800, 2000 ),
     "falloff":  lerp( 1500, 1800 ),
-    "energy":   lerp(  120, 150 ),
+    "energy":   lerp(  155, 190 ),
     "heatup":   lerp(   45,  60 ),
     "trackmin": lerp( 3000, 4000 ),
     "trackmax": lerp(16000, 20000 ),
     "penetrate":lerpr(  70, 100 ),
-    "damage":   lerp(   40,  50 ),
+    "damage":   lerp(   51,  65 ),
     "extra":    "",
 } ).run( [
     N_("Tentacle Organ I"),
